fix: correct test failds

--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -5,5 +5,8 @@
 {% block content %}
   <h1>{{ group.title }}</h1>
   {{ group.description|linebreaks }}
-  {% include 'posts/includes/posts.html' with show_author=True %}
+  {% for post in page_obj %}
+    {% include 'posts/includes/post.html' with show_author=True %}
+  {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 {% endblock %}
