--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,5 +5,8 @@
 {% block content %}
   <h1>Все посты пользователя {{ author.get_full_name }}</h1>
   <h3>Всего постов: {{ author.posts.count }}</h3>
-  {% include 'posts/includes/posts.html' with show_group_link=True %}
+  {% for post in page_obj %}
+    {% include 'posts/includes/post.html' with show_group_link=True %}
+  {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 {% endblock %}
