--- a/yatube/templates/posts/includes/post.html
+++ b/yatube/templates/posts/includes/post.html
@@ -18,6 +18,8 @@
   <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
 </article>
 {% if show_group_link and post.group %}
-  <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы "{{ post.group }}"</a>
+  <a href="{% url 'posts:group_list' post.group.slug %}">
+    все записи группы "{{ post.group }}"
+  </a>
 {% endif %}
 {% if not forloop.last %}<hr>{% endif %}
