--- a/yatube/templates/users/password_reset_done.html
+++ b/yatube/templates/users/password_reset_done.html
@@ -9,7 +9,10 @@
           Отправлено письмо
         </div>
         <div class="card-body">
-          <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для восстановления пароля</p>
+          <p>
+            Проверьте свою почту, вам должно прийти письмо со ссылкой
+            для восстановления пароля
+          </p>
         </div>
       </div>
     </div>
