--- a/yatube/templates/posts/includes/paginator.html
+++ b/yatube/templates/posts/includes/paginator.html
@@ -2,9 +2,12 @@
   <nav aria-label="Page navigation" class="my-5">
     <ul class="pagination">
       {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page=1">Первая</a></li>
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+          <a class="page-link" href="?page=1">Первая</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" 
+            href="?page={{ page_obj.previous_page_number }}">
             Предыдущая
           </a>
         </li>
@@ -27,7 +30,8 @@
           </a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
+          <a class="page-link" 
+            href="?page={{ page_obj.paginator.num_pages }}">
             Последняя
           </a>
         </li>
