--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -5,7 +5,8 @@
 {% block content %}
   <h1>Последние обновления на сайте</h1>
   {% for post in page_obj %}
-    {% include 'posts/includes/post.html' with show_group_link=True show_author=True %}
+    {% include 'posts/includes/post.html' with 
+      show_group_link=True show_author=True %}
   {% endfor %}
   {% include 'posts/includes/paginator.html' %}
 {% endblock %}
