--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -20,7 +20,8 @@
         <li class="list-group-item">
           Автор: {{ author.get_full_name }}
         </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
+        <li class="list-group-item d-flex 
+          justify-content-between align-items-center">
           Всего постов автора: <span>{{ author.posts.count }}</span>
         </li>
         <li class="list-group-item">
