--- a/yatube/templates/users/password_change_form.html
+++ b/yatube/templates/users/password_change_form.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Изменение пароля{% endblock %}
 {% block content %}
-  {% include 'includes/form.html' with header='Изменить пароль' button='Изменить пароль' %}
+  {% include 'includes/form.html' with 
+    header='Изменить пароль' button='Изменить пароль' %}
 {% endblock %}
