--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Сброс пароля{% endblock %}
 {% block content %}
-  {% include 'includes/form.html' with header='Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались' button='Сбросить пароль' %}
+  {% include 'includes/form.html' with 
+    header='Чтобы сбросить старый пароль — введите адрес электронной 
+      почты, под которым вы регистрировались'
+    button='Сбросить пароль' %}
 {% endblock %}
