--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -2,8 +2,7 @@
 {% block title %}Новый пароль{% endblock %}
 {% block content %}
   {% if validlink %}
-    {% include 'includes/form.html' 
-      with header='Введите новый пароль' button='Назначить новый пароль' %}
+    {% include 'includes/form.html' with header='Введите новый пароль' button='Назначить новый пароль' %}
   {% else %}
     <div class="row justify-content-center">
       <div class="col-md-8 p-5">
