--- a/yatube/templates/users/signup.html
+++ b/yatube/templates/users/signup.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% block title %}Зарегистрироваться{% endblock %}
 {% block content %}
-  {% include 'includes/form.html' with 
-    header='Зарегистрироваться' button='Зарегистрироваться' %}
+  {% include 'includes/form.html' with header='Зарегистрироваться' button='Зарегистрироваться' %}
 {% endblock %}
