--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -47,8 +47,11 @@
                 href="{% url 'users:logout' %}"
               >Выйти</a>
             </li>
-            <li>
-              Пользователь: {{ user.username }}
+            <li class="nav-item">
+              <a class="nav-link link-light 
+                {% if view_name == 'posts:profile' %}active{% endif %}"
+                href="{% url 'posts:profile' user %}"
+              >Пользователь: {{ user.username }}</a>
             </li>
           {% else %}
             <li class="nav-item"> 
