--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -11,23 +11,21 @@
         </li>
         {% if post.group %}
           <li class="list-group-item">
-            Группа: {{ post.group }}
+            Группа:
             <a href="{% url 'posts:group_list' post.group.slug %}">
-              все записи группы
+              {{ post.group }}
             </a>
           </li>
         {% endif %}
         <li class="list-group-item">
-          Автор: {{ author.get_full_name }}
+          Автор:
+          <a href="{% url 'posts:profile' post.author.username %}">
+            {{ post.author.get_full_name }}
+          </a>
         </li>
         <li class="list-group-item d-flex 
           justify-content-between align-items-center">
-          Всего постов автора: <span>{{ author.posts.count }}</span>
-        </li>
-        <li class="list-group-item">
-          <a href="{% url 'posts:profile' author.username %}">
-            все посты пользователя
-          </a>
+          Всего постов автора: <span>{{ post.author.posts.count }}</span>
         </li>
       </ul>
     </aside>
